fix lines (hr) positions, margins and padding fix item_wrapper positions, margin and padding for test: make body background-color grey create grid structure for according content fill 1st accordion content item with new labels fix input font and text align

--- a/style.css
+++ b/style.css
@@ -14,11 +14,16 @@ body {
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
+  color: #26252a;
   /* color: var(--tg-theme-text-color); */
   /* background: var(--tg-theme-bg-color); */
-  color: black;
-  background: white;
+  /* background: white; */
+  background: #b3b0c0;
   max-width: 390px;
+}
+
+main {
+  background-color: white;
 }
 
 a:link {
@@ -50,8 +55,8 @@ a:active {
 }
 
 .bckgrnd_top_icon_circle:hover {
-  transform: translate( -50% , 0 );
-  
+  transform: translate(-50%, 0);
+
   top: -3px;
   left: -33px;
   height: 95px;
@@ -76,6 +81,7 @@ a:active {
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
+  color: #ffffff;
 }
 
 .header3 {
@@ -83,7 +89,41 @@ a:active {
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
+  color: #ffffff;
 }
+
+div[class*="content_label"] {
+  font-family: 'Overpass Mono';
+  font-style: normal;
+  color: #FFFFFF;
+}
+
+.content_label1 {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.content_label2 {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
+}
+
+.content_label3 {
+  font-weight: 500;
+  font-size: 12px; 
+  line-height: 15px;
+  color: #C0E1FF;
+}
+
+.content_label4 {
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 13px;
+  color: #C0E1FF;
+}
+
 
 .cost {
   padding: 10px;
@@ -97,37 +137,63 @@ a:active {
 }
 
 .label {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 12px;
-  text-align: center;
-  word-wrap: break-word;
+  font-family: "Overpass Mono", monospace;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  color: #ffffff;
 }
+
+/* Accordion                      */
 
 .accordion {
-  margin: 20px;
+  display: inline-block;
+  margin: 0px;
+  padding: 0px;
 }
 
-.content {
-  background-color: #26252A;
-
+.accordion_trigger {
+  margin: 0px 20px 0px 20px;
+  padding: 10px 0px 10px 0px;
+  width: 350px;
+  height: 40px;
+  display: grid;
+  grid-template-columns: auto 50px;
+  grid-template-rows: 40px;
+  justify-items: center;
 }
 
+/* .accordion_trigger:hover div[class*="accordion_content"] {
+  
+} */
+
+.accordion_header {
+  font-family: "Overpass Mono", monospace;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  align-self: center;
+  justify-self: start;
+  margin-left: 36px;
+  padding: 0px;
+  color: #26252a;
+}
 
 .accordion_content {
-  background-color: transparent;
+  background-color: #26252a;
+  transition: max-height 1s;
+  overflow: hidden;
 }
 
-.grid {
+.content_grid1 {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: max-content;
 }
 
-.grid_buttons {
-  margin: 10px;
-  padding: 5px;
+.content_grid2 {
   display: grid;
-  grid-template-columns: 37% 63%;
+  grid-template-columns: 1fr 1fr;
   grid-template-rows: max-content;
 }
 
@@ -137,12 +203,32 @@ a:active {
   grid-template-rows: 2;
 }
 
+
+.grid_buttons {
+  margin: 10px;
+  padding: 5px;
+  display: grid;
+  grid-template-columns: 37% 63%;
+  grid-template-rows: max-content;
+}
+
+
 .input_number {
-  width: 130px;
-  height: 40px;
-  border-width: 1px;
-  border-radius: 10px;
-  font-family: inherit;
+  width: 70px;
+  height: 30px;
+  background-color: #37353c;
+  border: 1px solid #4657ef;
+  border-radius: 20px;
+  font-family: "Play";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  padding-right: 10px;
+  text-align: right;
+
 }
 
 /* убираем стрелки в инпутах */
@@ -158,7 +244,9 @@ input[type="number"] {
 }
 
 .input_number:focus {
-  outline: 2px solid aqua;
+  outline: none;
+  border: 2px solid #4657ef;
+  border-radius: 0px;
 }
 /* ----------------------------------- */
 
@@ -186,8 +274,8 @@ footer {
   display: inline-block;
   padding: 10px 20px;
   margin: 10px;
-  color: #26252A;
-  
+  color: #26252a;
+
   border: 1px solid #26252a;
   border-radius: 20px;
 
@@ -200,13 +288,13 @@ footer {
 }
 
 #back {
-  background: #FEDD4A;
+  background: #fedd4a;
   width: 96px;
   height: 43px;
 }
 
 #order {
-  background: #ED568C;
+  background: #ed568c;
   width: 129px;
   height: 43px;
 }
@@ -234,8 +322,8 @@ footer {
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
-  
-  background: #26252A;
+
+  background: #26252a;
 
   height: 59px;
   width: 390px;
@@ -253,19 +341,16 @@ footer {
 .clear_all_label {
   justify-self: right;
   margin-right: 104px;
-  color: #CDCDCD;
+  color: #cdcdcd;
 }
 
 .btn_bot:hover svg path {
-  fill: #C0E1FF;
+  fill: #c0e1ff;
 }
 
-  
 .btn_bot:hover div {
-  color: #C0E1FF;
+  color: #c0e1ff;
 }
-  
-
 
 /* ------------------------------------ */
 
@@ -285,13 +370,13 @@ footer {
   border: none;
   background-color: #26252a;
   height: 1px;
-  align-self: center;
   width: 350px;
+  margin: 0px 20px 0px 20px;
 }
 
 .item_wraper {
   margin: 0px 20px 0px 20px;
-  padding: 0px;
+  padding: 10px 0px 10px 0px;
   width: 350px;
   height: 40px;
   display: grid;
@@ -314,7 +399,6 @@ footer {
   justify-self: start;
   margin-left: 36px;
   padding: 0px;
-
   color: #26252a;
 }
 
